@@ -1,3 +1,9 @@
+2019-04-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* R/tools.R (getRcppVersion): More idiomatic code
+
 2019-04-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/tools.R (getRcppVersion): Export R (and dev) package version
